project header: add additional margin to avoid overlap and remove z-index on arros for same reason fixes #1028

--- a/adhocracy-plus/assets/scss/components/_project_header.scss
+++ b/adhocracy-plus/assets/scss/components/_project_header.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     padding: 1.3em 0;
     position: relative;
-    margin-bottom: 1em;
+    margin-bottom: 4em;
 
     text-align: center;
 
@@ -16,6 +16,7 @@
 
     @media (min-width: $breakpoint-md) {
         min-height: $hero-height-secondary;
+        margin-bottom: 1em;
     }
 
     @media print {
